--- a/app/scss/_serf.scss
+++ b/app/scss/_serf.scss
@@ -1,6 +1,6 @@
 .title{
     padding-top: 130px;
-    span{
+    &_span{
         position: relative;
         font-weight: 800;
         font-size: 200px;
