--- a/app/scss/_sleep.scss
+++ b/app/scss/_sleep.scss
@@ -1,34 +1,24 @@
+ 
+ 
+ 
+ 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ 
+ 
+ 
  .sleep{
-        position: relative;
-        background-image: url(../img/sleep/sleep_bed.png);
-        background-position: bottom right;
-        background-repeat: no-repeat;
-        min-height: 290px;
+    background-image: url(../img/sleep/flower.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    
+    .slider_arrow {
+        top: 145px;
+    }
     &_head{
         background-position: top left;
         background-repeat: no-repeat;
         min-height: 780px;
+       
     }
     &_head{
         text-align: right;
@@ -63,12 +53,149 @@
         text-align: right;
         text-transform: uppercase;
     }
-     &_bot{
-    } 
-    &_info{
-        display: flex;
-        justify-content: space-between;
-    }
    
     
+   
+    &_info{
+        display: flex;
+        justify-content: space-around;
+    }
+    &_bot{
+        padding-bottom: 50px;
+    }
+    &_bottom{
+        margin: -265px 0 120px 130px;
+        position: relative;
+        background-position: bottom right;
+        background-repeat: no-repeat;
+        min-height: 415px;
+    }
+    &_bottom_descr{
+        position: absolute;
+        bottom: 100px;
+    }
+    &_bottom_subtitle{
+        display: inline-block;
+        padding-bottom: 10px;
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 32px;
+        letter-spacing: 7.33333px;
+        text-transform: uppercase;
+        opacity: 0.5;
+        position: relative;
+        padding-right: 105px;
+        &::before{
+        content: "";
+        position: absolute;
+        width: 80px;
+        height: 1px;
+        background-color: white;
+        top: 50%;
+        right: 0;
+        }
+    }
+    &_bottom_title{
+        display: flex;
+        align-items: center;
+        font-weight: 800;
+        font-size: 40px;
+        line-height: 86px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        img{
+            padding-left: 15px;
+        }
+    }
+  
+    &_info_box{
+        max-width: 235px;
+        position: relative;
+        min-height: 200px;
+    }
+    &_box_subtitle{
+        position: absolute;
+        top: 85px;
+        left: -122px;
+        width: 200px;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 22px;
+        letter-spacing: 8px;
+        text-transform: uppercase;
+        mix-blend-mode: normal;
+        opacity: .5;
+        transform: rotate(-90deg);
+        white-space: nowrap;
+        text-align: right;
+    }
+    &_box_title{
+        display: flex;
+        max-width: 200px;
+        font-weight: 800;
+        font-size: 40px;
+        line-height: 36px;
+        text-transform: uppercase;
+    }
+    &_pricing_span{
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 36px;
+        text-align: right;
+        letter-spacing: 5.25px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        mix-blend-mode: normal;
+        opacity: 0.75;
+    }
+    &_slider_btn{
+        display: block;
+        text-align: center;
+    }
+    &_slider_button{
+        margin-bottom: 15px;
+        font-weight: 800;
+        font-size: 40px;
+        line-height: 36px;
+        text-align: right;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        span{
+            margin-left: 10px;
+            font-weight: 800;
+            font-size: 40px;
+            line-height: 36px;
+            text-align: right;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            padding: 17px 60px 17px 17px;
+            background: #4AF6CD;
+            position: relative;
+            &::before{
+                content: "";
+                position: absolute;
+                width: 25px;
+                height: 3px;
+                background-color: white;
+                top: 50%;
+                left: -15px;
+            }
+            &::after{
+                content: "";
+                position: absolute;
+                background-image: url(../img/sleep/Shape_Copy.svg);
+                top: 36%;
+                right: 31px;
+                width: 25px;
+                height: 22px;
+            }
+        }
+    }
+    &_pricing_span{
+        position: absolute;
+        right: 0;
+        bottom: 65%;
+    }
+   
 } 
